--- a/web_back/login.html
+++ b/web_back/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/iconfont.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="./js/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -32,9 +33,31 @@
         </div>
     </div>
 
-    <script src="./js/jquery-1.12.4.min.js"></script>
-    <script src="./js/tool.js"></script>
 
+    <!-- 登录界面中模态框的使用 -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">提示信息：</h4>
+                </div>
+                <div class="modal-body">
+                    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">确认</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./tools/tool.js"></script>
+    <script src="./tools/user.js"></script>
+    <!-- 模块框是js引用 -->
+    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
 
     <script>
 
@@ -47,27 +70,29 @@
             // 判断文本框中是否为空
             if (username.trim() === '' || password.trim() === '') {
                 // 如果为空输出，并返回
-                alert('请输入完整！');
+                // 进行模块框的调用
+                $('#myModal').modal('show').find('.modal-body').text('请输入完整信息！');
                 return;
             }
             // 发送请求
-            $.ajax({
-                type: 'post',
-                // 因为如果前后端要进行修改地址的话，单个操作麻烦，进行js封装
-                url: USER_LOGIN,
+
+            user.login({
                 data: {
                     user_name: username,
                     password: password
                 },
-                success: function (res) {
+                callback: function (res) {
                     // 进行判断，当传入的值为200时
                     if (res.code === 200) {
                         location.href = './index.html';
                     } else {
-                        alert('用户名和密码错误！');
+                        $('#myModal').modal('show')
+                            .find('.modal-body').text('用户名或密码错误!');
                     }
                 }
             });
+
+
         });
 
 
