--- a/web_back/article_category.html
+++ b/web_back/article_category.html
@@ -29,7 +29,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <!--   <tr>
                         <td>未分类</td>
                         <td>uncategorized</td>
                         <td class="text-center">
@@ -67,7 +67,7 @@
                                 class="btn btn-info btn-xs">编辑</a>
                             <a href="javascript:deleteTr( 4 );" class="btn btn-danger btn-xs">删除</a>
                         </td>
-                    </tr>
+                    </tr> -->
                 </tbody>
                 <tfoot>
                     <tr>
@@ -80,34 +80,34 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addModal" >
+    <div class="modal fade" id="addModal">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-              <h4 class="modal-title">新增分类</h4>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="control-label">分类名称:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                    <h4 class="modal-title">新增分类</h4>
                 </div>
-                <div class="form-group">
-                  <label for="message-text" class="control-label">分类别名:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">分类名称:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">分类别名:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                    </form>
                 </div>
-              </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
+                    <button type="button" class="btn btn-primary" id="model_add">新增</button>
+                </div>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
-              <button type="button" class="btn btn-primary" id="model_add">新增</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-      <script>
+    <!-- <script>
           $('#addModal').modal({
             show:false,
             backdrop:false
@@ -129,8 +129,43 @@
                 $('#addModal').modal('show');
               }
           })      
-      </script>
+      </script> -->
 
+
+    <script>
+        //  1. 分类信息的获取和展示
+        //  -------- 字符串的拼接 ---------
+
+        /* $.ajax({
+            url: 'http://localhost:8000/admin/category_search',
+            success: function (res) {
+                // 检测服务端的响应状态
+                if (res.code === 200) {
+                    // 进行结构字符串拼接
+                    // 声明变量，保存结果
+                    var str = '';
+                    $.each(res.data, function (i, ele) {
+                        str += '<tr>\
+                            <td>'+ ele.name + '</td >\
+                            <td>'+ ele.slug + '</td>\
+                            <td class="text-center">\
+                                <a href="javascript:;" class="btn btn-info btn-xs">编辑</a>\
+                                <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>\
+                            </td>\
+                         </tr > ';
+                    });
+                    // 将拼接的str生成到tbody标签中
+                    $('tbody').html(str);
+                }
+            }
+        });
+ */
+
+
+    //  ------- 模板引擎 -------
+
+
+    </script>
 </body>
 
 </html>
