--- a/web_back/article_category.html
+++ b/web_back/article_category.html
@@ -28,7 +28,7 @@
                         <th class="text-center" width="100">操作</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="tbody">
                     <!--   <tr>
                         <td>未分类</td>
                         <td>uncategorized</td>
@@ -72,7 +72,8 @@
                 <tfoot>
                     <tr>
                         <td colspan="3" class="text-center">
-                            <a href="#" class="btn btn-success" data-toggle="modal" data-target="#addModal">新增分类</a>
+                            <a href="#" id="addBtn" class="btn btn-success" data-toggle="modal"
+                                data-target="#addModal">新增分类</a>
                         </td>
                     </tr>
                 </tfoot>
@@ -91,17 +92,18 @@
                     <form>
                         <div class="form-group">
                             <label for="recipient-name" class="control-label">分类名称:</label>
-                            <input type="text" class="form-control" id="recipient-name">
+                            <input type="text" class="form-control" id="cate_name">
                         </div>
                         <div class="form-group">
                             <label for="message-text" class="control-label">分类别名:</label>
-                            <input type="text" class="form-control" id="recipient-name">
+                            <input type="text" class="form-control" id="cate_slug">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
-                    <button type="button" class="btn btn-primary" id="model_add">新增</button>
+                    <button type="button" class="btn btn-default" id="modal_shutoff" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-primary" id="modal_add">新增</button>
+                    <button type="button" class="btn btn-primary" style="display: none;" id="modal_edit">提交编辑</button>
                 </div>
             </div>
         </div>
@@ -113,12 +115,12 @@
             backdrop:false
           });
 
-          $('#model_shutoff').click(function(){
+          $('#modal_shutoff').click(function(){
             alert('shutoff');
             $('#addModal').modal('hide');
           });
 
-          $('#model_add').click(function(){
+          $('#modal_add').click(function(){
             alert('add');
             $('#addModal').modal('hide');
           });
@@ -132,14 +134,36 @@
       </script> -->
 
 
-    <script>
+    <!-- 进行引入模板 -->
+    <script src="./js/template-web.js"></script>
+
+    <!-- 设置分类结构模板 -->
+    <script type="text/html" id="category">
+        <!-- 遍历 -->
+    {{each data v}}
+    <tr>
+        <td>{{v.name}}</td>
+        <td>{{v.slug}}</td>
+        <td class="text-center">
+            <a href="javascript:;" data-id="{{v.id}}" class="btn btn-info btn-xs edit">编辑</a>
+            <a href="javascript:;" data-id="{{v.id}}" class="btn btn-danger btn-xs del">删除</a>
+        </td>
+    </tr>
+    {{/each}}
+    </script>
+
+
+
+    <!--  字符串的拼接  -->
+    <!-- <script>
         //  1. 分类信息的获取和展示
         //  -------- 字符串的拼接 ---------
 
-        /* $.ajax({
+        $.ajax({
             url: 'http://localhost:8000/admin/category_search',
             success: function (res) {
                 // 检测服务端的响应状态
+                // console.log(res);
                 if (res.code === 200) {
                     // 进行结构字符串拼接
                     // 声明变量，保存结果
@@ -159,13 +183,112 @@
                 }
             }
         });
- */
+
+    </script> -->
+
+    <!-- 模板引擎 -->
+    <script>
+        // ------- 一、信息的展示 -------
+        $.ajax({
+            url: 'http://localhost:8000/admin/category_search',
+            success: function (res) {
+                // console.log(res);
+                if (res.code === 200) {
+                    // 通过模板引擎进行结构字符串拼接
+                    var htmlStr = template('category', res); //在模板内部获取res.data的数据
+                    // 将拼接的str生成给tbody标签
+                    // console.log(htmlStr);
+                    $('#tbody').html(htmlStr);
+                }
+            }
+        });
 
 
-    //  ------- 模板引擎 -------
+        // ------- 二、信息的增加功能 -------
+        // 点击获取内容是否填写
+        $('#modal_add').on('click', function () {
+            // 进行内容检测
+            var name = $('#cate_name').val();
+            var slug = $('#cate_slug').val();
+            if (name.trim() === '' || slug.trim() === '') {
+                alert('请完整填写表单!')
+                return;
+            }
+
+            // 发送请求
+            $.ajax({
+                type: 'post',
+                url: 'http://localhost:8000/admin/category_add',
+                data: {
+                    name: name,
+                    slug: slug
+                },
+                success: function (res) {
+                    // 判断请求返回
+                    if (res.code === 200) {
+                        // 刷新页面
+                        location.reload();
+                    } else {
+                        // 提示信息
+                        alert(res.msg);
+                    }
+                }
+            });
+        });
+
+        //  ------- 三、分类数据的编辑功能 --------
+        // 1.设置点击事件
+        $('#tbody').on('click', '.edit', function () {
+            // 1.1 获取当前元素的data-id属性
+            var id = $(this).data('id');
+            // 在提交编辑按钮点击时，获取到当前的id
+            $('#modal_edit').data('id', id);
+
+            // 1.2 将当前编辑的数据填写到模态框中
+            // 将当前行的内容赋值到$tds中
+            var $tds = $(this).parents('tr').children();
+            // 在第一个文本框中内容显示
+            $('#cate_name').val($tds.eq(0).text());
+            $('#cate_slug').val($tds.eq(1).text());
+
+
+
+
+            // console.log(id);
+            // 将模态框显示,并调节提交编辑和新增按钮
+            $('#addModal').modal('show');
+            $('#modal_add').hide();
+            $('#modal_edit').show();
+        });
+
+        // 给新增按钮设置点击事件
+        $('#addBtn').on('click', function () {
+            $('#modal_add').show();
+            $('#modal_edit').hide();
+
+        })
+
+        // 设置提交按钮的点击事件
+        $('#modal_edit').on('click', function () {
+            // 获取id
+            var id = $(this).data('id');
+
+            // 获取两个输入框内容并检测是否填写完毕
+            var name = $('#cate_name').val();
+            var slug = $('#cate_slug').val();
+
+            if (name.trim() === '' || slug.trim() === '') {
+                alert('请完整填写表单！');
+                return;
+            }
+        });
+
 
 
     </script>
+
+
+
 </body>
 
 </html>
